se modifico path menu desplegable

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item active" href="#">Home</a></li>
                         <li><a class="dropdown-item" href="pages/sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="boostrap/pages/formacion.html">Formacion</a></li>
-                        <li><a class="dropdown-item" href="boostrap/pages/habilidades.html">Habilidades</a></li>
-                        <li><a class="dropdown-item" href="boostrap/pages/proyectos.html">Proyectos</a></li>
-                        <li><a class="dropdown-item" href="boostrap/pages/contacto.html">Contacto</a></li>
+                        <li><a class="dropdown-item" href="pages/formacion.html">Formacion</a></li>
+                        <li><a class="dropdown-item" href="pages/habilidades.html">Habilidades</a></li>
+                        <li><a class="dropdown-item" href="pages/proyectos.html">Proyectos</a></li>
+                        <li><a class="dropdown-item" href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
