se mejoro el footer

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -176,7 +176,7 @@
         </section>
     </main>
 
-    <footer class="blockquote-footer containerFooter mt-2 mb-0">
+    <footer class="fixed-bottom containerFooter mt-2 mb-0">
         <div class="LinksHome">
             <a href="https://www.linkedin.com/in/juan-cruz-iparraguirre/" target="_blank">
                 <img src="../imagenes/icon-linkedin.png" alt="linkedin">
