--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -128,7 +128,7 @@
         </section>
     </main>
 
-    <footer class="blockquote-footer containerFooter mb-0">
+    <footer class="fixed-bottom containerFooter mb-0">
         <div class="LinksHome">
             <a href="https://www.linkedin.com/in/juan-cruz-iparraguirre/" target="_blank">
                 <img src="../imagenes/icon-linkedin.png" alt="linkedin">
