--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h3 data-aos="fade-right"
                         data-aos-anchor="#example-anchor"
                         data-aos-offset="500"
-                        data-aos-duration="1000">DevOps Engineer</h3>
+                        data-aos-duration="1000">DevOps Engineer Junior</h3>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
         </section>
     </main>
 
-    <footer class="blockquote-footer containerFooter">
+    <footer class="fixed-bottom containerFooter">
         <div class="LinksHome">
             <a href="https://www.linkedin.com/in/juan-cruz-iparraguirre/" target="_blank">
                 <img src="imagenes/icon-linkedin.png" alt="linkedin">
