correccion de textos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link " href="pages/sobremi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="pages/formacion.html">Formacion</a>
+                    <a class="nav-link " href="pages/Formacion.html">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/habilidades.html">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item active" href="#">Home</a></li>
                         <li><a class="dropdown-item" href="pages/sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="pages/formacion.html">Formacion</a></li>
+                        <li><a class="dropdown-item" href="pages/Formacion.html">Formación</a></li>
                         <li><a class="dropdown-item" href="pages/habilidades.html">Habilidades</a></li>
                         <li><a class="dropdown-item" href="pages/proyectos.html">Proyectos</a></li>
                         <li><a class="dropdown-item" href="pages/contacto.html">Contacto</a></li>
@@ -88,20 +88,19 @@
                     </div>
                 </div>
                 <div class="row" >
-                    <div class="col-1"></div>
-                    <div class="display-4 col-7 titulo" >
+                    <div class="display-4 col-md-6 col-12 titulo" >
                         <h3 data-aos="fade-right"
                         data-aos-anchor="#example-anchor"
                         data-aos-offset="500"
                         data-aos-duration="1000">DevOps Engineer Junior</h3>
-                    </div>
+                    </div>   
                 </div>
             </div>
 
             <div class="container-fluid texto">
                 <div class="row">
                     <div class="col-7 textoInfo">
-                        <p>Me presento como estudiante de la carrera en DevOps Engineer. Como persona amante de la tecnologia busco crear proyectos que me brinden experiencia en el sector, con el objetivo de conseguir mi primer empleo en el mundo IT.</p>
+                        <p>Me presento como estudiante de la carrera en DevOps Engineer. Como persona amante de la tecnología busco crear proyectos que me brinden experiencia en el sector, con el objetivo de conseguir mi primer empleo en el mundo IT.</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +115,7 @@
         </section>
     </main>
 
-    <footer class="fixed-bottom containerFooter">
+    <footer class="fixed-bottom containerFooter mt-10">
         <div class="LinksHome">
             <a href="https://www.linkedin.com/in/juan-cruz-iparraguirre/" target="_blank">
                 <img src="imagenes/icon-linkedin.png" alt="linkedin">
