--- a/pages/formacion.html
+++ b/pages/formacion.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="sobremi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Formacion</a>
+                    <a class="nav-link active" href="#">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="habilidades.html">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item " href="../index.html">Home</a></li>
                         <li><a class="dropdown-item " href="sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item active" href="#">Formacion</a></li>
+                        <li><a class="dropdown-item active" href="#">Formación</a></li>
                         <li><a class="dropdown-item" href="habilidades.html">Habilidades</a></li>
                         <li><a class="dropdown-item" href="proyectos.html">Proyectos</a></li>
                         <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
@@ -68,16 +68,16 @@
         </div>
     </header>
     <main>
-        <section class="formacion" id="formacion">
-            <h2>Formacion</h2>
+        <section class="Formacion" id="formacion">
+            <h2>Formación</h2>
             <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2 gy-4 mb-3 mt-2 justify-content-center">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-2 gy-4 mb-3 mt-2 justify-content-center">
                     <div class="col">
                       <div class="card cardsHabilidades h-70">
                         <img src="../imagenes/unlam-logo.png" class="card-img-top" alt="Universidad de la matanza">
                         <div class="card-body">
                           <h5 class="card-title titleUnlam">Universidad de la matanza</h5>
-                          <h6 class="sub-title subtitleUnlam">Ingenieria en Informatica</h6>
+                          <h6 class="sub-title subtitleUnlam">Ingeniería en informática</h6>
                           <p class="card-text textUnlam">2024 - en curso</p>
                         </div>
                       </div>
