--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -21,7 +21,7 @@
                     <a class="nav-link " href="sobremi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="formacion.html">Formacion</a>
+                    <a class="nav-link " href="formacion.html">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="habilidades.html">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item " href="../index.html">Home</a></li>
                         <li><a class="dropdown-item " href="sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="formacion.html">Formacion</a></li>
+                        <li><a class="dropdown-item" href="formacion.html">Formación</a></li>
                         <li><a class="dropdown-item" href="habilidades.html">Habilidades</a></li>
                         <li><a class="dropdown-item active" href="#">Proyectos</a></li>
                         <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
@@ -80,7 +80,7 @@
                             <img src="../imagenes/porfolio.jpg" class="card-img-top custom.image" alt="portfolio">
                             <div class="card-body">
                               <h5 class="card-title">Portfolio Web</h5>
-                              <p class="card-text">Mi portfolio web personal, donde se encuentran algunos de mis proyectos mas destacados, mis habilidades tecnicas y mi formacion.<br>
+                              <p class="card-text">Mi portfolio web personal, donde se encuentran algunos de mis proyectos mas destacados, mis habilidades tecnicas y mi Formación.<br>
                             Proyecto personal realizado con HTML5, CSS y Boostrap</p>
                               <a href="../index.html" target="_blank" class="btn demo">
                                 <button class="buttonDemo">
