--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -21,7 +21,7 @@
                     <a class="nav-link active" href="#">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="formacion.html">Formacion</a>
+                    <a class="nav-link " href="formacion.html">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="habilidades.html">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item " href="../index.html">Home</a></li>
                         <li><a class="dropdown-item active" href="#">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="formacion.html">Formacion</a></li>
+                        <li><a class="dropdown-item" href="formacion.html">Formación</a></li>
                         <li><a class="dropdown-item" href="habilidades.html">Habilidades</a></li>
                         <li><a class="dropdown-item" href="proyectos.html">Proyectos</a></li>
                         <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
@@ -76,8 +76,8 @@
                     <div class="col-12 col-6 col-lg-6 titleSobreMi ">
                         <span>Juan Cruz Iparraguirre</span>
                         <br>
-                        <p class="textSobreMi">Soy estudiante de la carrera de grado en Ingenieria en informatica y estudiante de la tecnicatura en DevOps. <br><br>Aspiro a conseguir mi primer empleo en el mundo IT, aplicando mis habilidades y conocimientos para continuar dearrollandome a nivel profesional y personal.<br>
-                        Soy una persona empatica y entusiasta, con copentencias enfocadas en el trabajo en equipo, comunicacion asertiva, resolucion de problemas, responsable y proactivo, me gusta aprender de los demas y superarme continuamente</p>
+                        <p class="textSobreMi">Soy estudiante de la carrera de grado en Ingeniería en informática y estudiante de la tecnicatura en DevOps.<br><br>AAspiro a conseguir mi primer empleo en el mundo IT, aplicando mis habilidades y conocimientos para continuar desarrollándome a nivel profesional y personal.<br>
+                        Soy una persona empática y entusiasta, con competencias enfocadas en el trabajo en equipo, comunicación asertiva, resolución de problemas, responsable y proactivo, me gusta aprender de los demás y superarme continuamente</p>
                     </div>
                 </div>
             </div>
