solucion bugs formacion.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link " href="pages/sobremi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="pages/Formacion.html">Formación</a>
+                    <a class="nav-link " href="pages/formacion.html">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/habilidades.html">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item active" href="#">Home</a></li>
                         <li><a class="dropdown-item" href="pages/sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="pages/Formacion.html">Formación</a></li>
+                        <li><a class="dropdown-item" href="pages/formacion.html">Formación</a></li>
                         <li><a class="dropdown-item" href="pages/habilidades.html">Habilidades</a></li>
                         <li><a class="dropdown-item" href="pages/proyectos.html">Proyectos</a></li>
                         <li><a class="dropdown-item" href="pages/contacto.html">Contacto</a></li>
