--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -21,7 +21,7 @@
                     <a class="nav-link " href="sobremi.html">Sobre mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="Formacion.html">Formación</a>
+                    <a class="nav-link " href="formacion.html">Formación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Habilidades</a>
@@ -58,7 +58,7 @@
                     <ul class="dropdown-menu-light dropdown-menu-right">
                         <li><a class="dropdown-item " href="../index.html">Home</a></li>
                         <li><a class="dropdown-item active" href="sobremi.html">Sobre Mi</a></li>
-                        <li><a class="dropdown-item" href="Formacion.html">Formación</a></li>
+                        <li><a class="dropdown-item" href="formacion.html">Formación</a></li>
                         <li><a class="dropdown-item" href="#">Habilidades</a></li>
                         <li><a class="dropdown-item" href="proyectos.html">Proyectos</a></li>
                         <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
