--- a/pages/formacion.html
+++ b/pages/formacion.html
@@ -68,7 +68,7 @@
         </div>
     </header>
     <main>
-        <section class="Formacion" id="formacion">
+        <section class="formacion" id="formacion">
             <h2>Formación</h2>
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-2 gy-4 mb-3 mt-2 justify-content-center">
